--- a/benchmarks/uf_experiments/cc18/results_figures.ipynb
+++ b/benchmarks/uf_experiments/cc18/results_figures.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,6 +90,7 @@
    "outputs": [],
    "source": [
     "df_rows = []\n",
+    "task_ids = []\n",
     "results_dir = './results/'\n",
     "for file in os.listdir(results_dir):\n",
     "    with open(results_dir + file, 'rb') as f:\n",
@@ -113,7 +114,7 @@
     "\n",
     "    row = [f'{m:.3f} ({s:.3f})' for m, s in zip(score_means, score_stds)]\n",
     "    row = [results_dict['task'], results_dict['n_classes'], results_dict['n_samples'], results_dict['n_features']] + row\n",
-    "    \n",
+    "    task_ids.append(results_dict['task_id'])\n",
     "    df_rows.append(row)"
    ]
   },
