--- a/benchmarks/uf_experiments/cc18/test_experiment.ipynb
+++ b/benchmarks/uf_experiments/cc18/test_experiment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,8 @@
     "\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.compose import ColumnTransformer\n",
-    "from sklearn.preprocessing import OneHotEncoder"
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "from sklearn.impute import SimpleImputer"
    ]
   },
   {
@@ -32,7 +33,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -128,46 +131,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3 kr-vs-kp\n",
-      "6 letter\n",
-      "11 balance-scale\n",
-      "12 mfeat-factors\n",
-      "14 mfeat-fourier\n",
-      "15 breast-w\n"
+      "kr-vs-kp\n"
      ]
     }
    ],
    "source": [
-    "for id in benchmark_suite.tasks[:6]:\n",
-    "    print(id, openml.tasks.get_task(id).get_dataset().name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 123,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "task_id = 15\n",
+    "task_id = 3\n",
     "task = openml.tasks.get_task(task_id)  # download the OpenML task\n",
     "X, y = task.get_X_and_y()  # get the data\n",
     "\n",
     "task_name = task.get_dataset().name\n",
     "n_samples, n_features = X.shape\n",
     "n_classes = len(np.unique(y))\n",
-    "nominal_indices = task.get_dataset().get_features_by_type('nominal', [task.target_name])"
+    "nominal_indices = task.get_dataset().get_features_by_type('nominal', [task.target_name])\n",
+    "\n",
+    "print(task_name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,11 +184,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv = 2\n",
+    "cv = 10\n",
     "skf = StratifiedKFold(n_splits=cv, shuffle=True, random_state=0)\n",
     "\n",
     "results_dict = {\n",
@@ -254,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,14 +258,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.03456740506400609]\n"
+      "IRF: 0.008 (0.0034)\n",
+      "SigRF: 0.008 (0.0037)\n",
+      "UF: 0.007 (0.0030)\n",
+      "RF: 0.012 (0.0034)\n"
      ]
     }
    ],
@@ -287,7 +280,17 @@
     "        ) for y_proba, idx in zip(results_dict[name], results_dict['test_indices'])\n",
     "    ]) for name, _ in clfs\n",
     "]\n",
-    "print(score_means)"
+    "\n",
+    "score_stds = [\n",
+    "    np.std([\n",
+    "        brier_score_mvloss(\n",
+    "            results_dict['y'][idx], y_proba\n",
+    "        ) for y_proba, idx in zip(results_dict[name], results_dict['test_indices'])\n",
+    "    ]) for name, _ in clfs\n",
+    "]\n",
+    "\n",
+    "for (name, _), m, s in zip(clfs, score_means, score_stds):\n",
+    "    print(f'{name}: {m:.3f} ({s:.4f})')"
    ]
   },
   {
@@ -368,75 +371,6 @@
     "    mce = np.max(np.abs(bin_acc - bin_conf))\n",
     "    \n",
     "    return mce"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 470,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "score_means = [\n",
-    "    np.mean([\n",
-    "        brier_score_mvloss(\n",
-    "            results_dict['y'][idx], y_proba\n",
-    "        ) for y_proba, idx in zip(results_dict[name], results_dict['test_indices'])\n",
-    "    ]) for name, _ in clfs\n",
-    "]\n",
-    "\n",
-    "score_stds = [\n",
-    "    np.std([\n",
-    "        brier_score_mvloss(\n",
-    "            results_dict['y'][idx], y_proba\n",
-    "        ) for y_proba, idx in zip(results_dict[name], results_dict['test_indices'])\n",
-    "    ]) for name, _ in clfs\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 471,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0.00997655013004404,\n",
-       " 0.009518803719218543,\n",
-       " 0.008660059515115379,\n",
-       " 0.013023619473787168]"
-      ]
-     },
-     "execution_count": 471,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "score_means"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 472,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0.003881900422500911,\n",
-       " 0.003952809476275835,\n",
-       " 0.003111902232668239,\n",
-       " 0.0034155918537358983]"
-      ]
-     },
-     "execution_count": 472,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "score_stds"
    ]
   },
   {
