--- a/benchmarks/uf_experiments/cc18/test_experiment.ipynb
+++ b/benchmarks/uf_experiments/cc18/test_experiment.ipynb
@@ -131,19 +131,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kr-vs-kp\n"
+      "letter\n"
      ]
     }
    ],
    "source": [
-    "task_id = 3\n",
+    "task_id = 6\n",
     "task = openml.tasks.get_task(task_id)  # download the OpenML task\n",
     "X, y = task.get_X_and_y()  # get the data\n",
     "\n",
@@ -157,12 +157,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "n_estimators = 100\n",
-    "n_jobs = 40\n",
+    "n_jobs = 5\n",
     "\n",
     "clfs = [\n",
     "    ('IRF', CalibratedClassifierCV(\n",
@@ -184,11 +184,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv = 10\n",
+    "cv = 5\n",
     "skf = StratifiedKFold(n_splits=cv, shuffle=True, random_state=0)\n",
     "\n",
     "results_dict = {\n",
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,17 +258,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "IRF: 0.008 (0.0034)\n",
-      "SigRF: 0.008 (0.0037)\n",
-      "UF: 0.007 (0.0030)\n",
-      "RF: 0.012 (0.0034)\n"
+      "IRF: 0.037 (0.0000)\n",
+      "SigRF: 0.037 (0.0000)\n",
+      "UF: 0.037 (0.0000)\n",
+      "RF: 0.037 (0.0000)\n"
      ]
     }
    ],
@@ -291,16 +291,6 @@
     "\n",
     "for (name, _), m, s in zip(clfs, score_means, score_stds):\n",
     "    print(f'{name}: {m:.3f} ({s:.4f})')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 134,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# with open(f'./results/{task_name}_results_dict.pkl', 'wb') as f:\n",
-    "#     pickle.dump(results_dict, f)"
    ]
   },
   {
