--- a/benchmarks/uf_experiments/cc18/results_figures.ipynb
+++ b/benchmarks/uf_experiments/cc18/results_figures.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
     "    \n",
     "    return np.asarray(bin_acc), np.asarray(bin_conf)\n",
     "\n",
-    "def ece(y_true, y_proba, n_bins=1):\n",
+    "def ece(y_true, y_proba, n_bins=10):\n",
     "    bin_idx = bin_data(y_proba.max(axis=1), n_bins)\n",
     "    n = len(y_true)\n",
     "    \n",
@@ -56,12 +56,10 @@
     "    \n",
     "    return ece\n",
     "\n",
-    "def mce(y_true, y_proba, n_bins):\n",
+    "def mce(y_true, y_proba, n_bins=10):\n",
     "    bin_idx = bin_data(y_proba.max(axis=1), n_bins)\n",
     "    \n",
     "    bin_acc, bin_conf = bin_stats(y_true, y_proba, bin_idx)\n",
-    "    print(bin_acc)\n",
-    "    print(bin_conf)\n",
     "    mce = np.max(np.abs(bin_acc - bin_conf))\n",
     "    \n",
     "    return mce\n",
@@ -127,6 +125,13 @@
    "metadata": {},
    "source": [
     "## CSVs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Brier"
    ]
   },
   {
@@ -322,12 +327,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ECE"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tasks, task_score_means, task_score_stds = get_task_scores(brier_score_mvloss)\n",
+    "tasks, task_score_means, task_score_stds = get_task_scores(ece)\n",
     "\n",
     "df_rows = []\n",
     "for task, score_means, score_stds in zip(tasks, task_score_means, task_score_stds):\n",
@@ -336,6 +348,223 @@
     "    df_rows.append(row)\n",
     "header = ['Dataset', 'n_classes', 'n_samples', 'n_features'] + clfs"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "score_df = pd.DataFrame(\n",
+    "    df_rows, columns=header, index=[task['task_id'] for task in tasks]\n",
+    ").sort_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                       Dataset  n_classes  n_samples  \\\n",
+      "3                                     kr-vs-kp          2       3196   \n",
+      "6                                       letter         26      20000   \n",
+      "11                               balance-scale          3        625   \n",
+      "12                               mfeat-factors         10       2000   \n",
+      "14                               mfeat-fourier         10       2000   \n",
+      "15                                    breast-w          2        699   \n",
+      "16                              mfeat-karhunen         10       2000   \n",
+      "18                         mfeat-morphological         10       2000   \n",
+      "22                               mfeat-zernike         10       2000   \n",
+      "23                                         cmc          3       1473   \n",
+      "28                                   optdigits         10       5620   \n",
+      "29                             credit-approval          2        690   \n",
+      "31                                    credit-g          2       1000   \n",
+      "32                                   pendigits         10      10992   \n",
+      "37                                    diabetes          2        768   \n",
+      "43                                    spambase          2       4601   \n",
+      "45                                      splice          3       3190   \n",
+      "49                                 tic-tac-toe          2        958   \n",
+      "53                                     vehicle          4        846   \n",
+      "219                                electricity          2      45312   \n",
+      "2074                                  satimage          6       6430   \n",
+      "2079                                eucalyptus          5        736   \n",
+      "3021                                      sick          2       3772   \n",
+      "3022                                     vowel         11        990   \n",
+      "3481                                    isolet         26       7797   \n",
+      "3549                    analcatdata_authorship          4        841   \n",
+      "3560                          analcatdata_dmft          6        797   \n",
+      "3573                                 mnist_784         10      70000   \n",
+      "3902                                       pc4          2       1458   \n",
+      "3903                                       pc3          2       1563   \n",
+      "3904                                       jm1          2      10885   \n",
+      "3913                                       kc2          2        522   \n",
+      "3917                                       kc1          2       2109   \n",
+      "3918                                       pc1          2       1109   \n",
+      "7592                                     adult          2      48842   \n",
+      "9910                               Bioresponse          2       3751   \n",
+      "9946                                      wdbc          2        569   \n",
+      "9952                                   phoneme          2       5404   \n",
+      "9957                               qsar-biodeg          2       1055   \n",
+      "9960                     wall-robot-navigation          4       5456   \n",
+      "9964                                   semeion         10       1593   \n",
+      "9971                                      ilpd          2        583   \n",
+      "9976                                   madelon          2       2600   \n",
+      "9977                                     nomao          2      34465   \n",
+      "9978                           ozone-level-8hr          2       2534   \n",
+      "9981                                    cnae-9          9       1080   \n",
+      "9985               first-order-theorem-proving          6       6118   \n",
+      "10093                  banknote-authentication          2       1372   \n",
+      "10101         blood-transfusion-service-center          2        748   \n",
+      "14952                         PhishingWebsites          2      11055   \n",
+      "14954                           cylinder-bands          2        540   \n",
+      "14965                           bank-marketing          2      45211   \n",
+      "14969        GesturePhaseSegmentationProcessed          5       9873   \n",
+      "125920                           dresses-sales          2        500   \n",
+      "125922                                 texture         11       5500   \n",
+      "146195                               connect-4          3      67557   \n",
+      "146800                             MiceProtein          8       1080   \n",
+      "146817                      steel-plates-fault          7       1941   \n",
+      "146819        climate-model-simulation-crashes          2        540   \n",
+      "146820                                    wilt          2       4839   \n",
+      "146821                                     car          4       1728   \n",
+      "146822                                 segment          7       2310   \n",
+      "146824                             mfeat-pixel         10       2000   \n",
+      "167119  jungle_chess_2pcs_raw_endgame_complete          3      44819   \n",
+      "167120                             numerai28.6          2      96320   \n",
+      "167125                 Internet-Advertisements          2       3279   \n",
+      "167140                                     dna          3       3186   \n",
+      "167141                                   churn          2       5000   \n",
+      "\n",
+      "        n_features             RF            IRF          SigRF             UF  \n",
+      "3               36  0.029 (0.002)  0.021 (0.003)  0.028 (0.005)  0.024 (0.005)  \n",
+      "6               16  0.007 (0.002)  0.006 (0.002)  0.012 (0.003)  0.007 (0.003)  \n",
+      "11               4  0.080 (0.024)  0.077 (0.030)  0.111 (0.040)  0.080 (0.023)  \n",
+      "12             216  0.121 (0.011)  0.060 (0.011)  0.040 (0.014)  0.023 (0.007)  \n",
+      "14              76  0.004 (0.000)  0.000 (0.000)  0.000 (0.000)  0.002 (0.000)  \n",
+      "15               9  0.050 (0.017)  0.046 (0.017)  0.045 (0.022)  0.047 (0.020)  \n",
+      "16              64  0.004 (0.000)  0.000 (0.000)  0.000 (0.000)  0.002 (0.000)  \n",
+      "18               6  0.011 (0.006)  0.013 (0.006)  0.037 (0.008)  0.033 (0.006)  \n",
+      "22              47  0.003 (0.000)  0.000 (0.000)  0.000 (0.000)  0.002 (0.000)  \n",
+      "23               9  0.030 (0.012)  0.030 (0.008)  0.023 (0.011)  0.026 (0.012)  \n",
+      "28              64  0.173 (0.003)  0.027 (0.008)  0.053 (0.010)  0.179 (0.013)  \n",
+      "29              15  0.025 (0.013)  0.028 (0.015)  0.021 (0.012)  0.027 (0.020)  \n",
+      "31              20  0.052 (0.015)  0.045 (0.019)  0.051 (0.025)  0.049 (0.017)  \n",
+      "32              16  0.008 (0.003)  0.007 (0.003)  0.013 (0.003)  0.007 (0.003)  \n",
+      "37               8  0.047 (0.036)  0.039 (0.015)  0.034 (0.013)  0.049 (0.035)  \n",
+      "43              57  0.017 (0.007)  0.013 (0.004)  0.020 (0.006)  0.011 (0.002)  \n",
+      "45              60  0.085 (0.012)  0.053 (0.011)  0.071 (0.007)  0.176 (0.014)  \n",
+      "49               9  0.044 (0.013)  0.029 (0.018)  0.088 (0.056)  0.039 (0.013)  \n",
+      "53              18  0.053 (0.017)  0.056 (0.009)  0.040 (0.011)  0.047 (0.016)  \n",
+      "219              8  0.001 (0.000)  0.000 (0.000)  0.000 (0.000)  0.001 (0.001)  \n",
+      "2074            36  0.040 (0.012)  0.034 (0.015)  0.057 (0.025)  0.045 (0.017)  \n",
+      "2079            19  0.103 (0.020)  0.096 (0.038)  0.079 (0.039)  0.063 (0.010)  \n",
+      "3021            29  0.001 (0.001)  0.001 (0.000)  0.001 (0.000)  0.012 (0.001)  \n",
+      "3022            12  0.100 (0.006)  0.068 (0.009)  0.091 (0.021)  0.099 (0.006)  \n",
+      "3481           617  0.032 (0.001)  0.006 (0.001)  0.003 (0.001)  0.000 (0.000)  \n",
+      "3549            70  0.253 (0.038)  0.070 (0.013)  0.045 (0.010)  0.055 (0.016)  \n",
+      "3560             4  0.045 (0.028)  0.050 (0.030)  0.032 (0.024)  0.049 (0.027)  \n",
+      "3573           784  0.000 (0.000)  0.000 (0.000)  0.000 (0.000)  0.001 (0.000)  \n",
+      "3902            37  0.040 (0.006)  0.027 (0.010)  0.035 (0.009)  0.030 (0.006)  \n",
+      "3903            37  0.027 (0.010)  0.020 (0.011)  0.029 (0.009)  0.019 (0.006)  \n",
+      "3904            21  0.010 (0.005)  0.010 (0.005)  0.010 (0.005)  0.010 (0.006)  \n",
+      "3913            21  0.048 (0.021)  0.024 (0.012)  0.058 (0.025)  0.066 (0.009)  \n",
+      "3917            21  0.020 (0.010)  0.018 (0.007)  0.017 (0.009)  0.019 (0.010)  \n",
+      "3918            21  0.015 (0.015)  0.015 (0.014)  0.013 (0.005)  0.028 (0.003)  \n",
+      "7592            14  0.002 (0.001)  0.002 (0.001)  0.005 (0.002)  0.002 (0.001)  \n",
+      "9910          1776  0.181 (0.017)  0.030 (0.012)  0.029 (0.008)  0.015 (0.008)  \n",
+      "9946            30  0.020 (0.006)  0.005 (0.002)  0.005 (0.002)  0.010 (0.006)  \n",
+      "9952             5  0.001 (0.000)  0.000 (0.000)  0.000 (0.000)  0.000 (0.000)  \n",
+      "9957            41  0.047 (0.008)  0.029 (0.007)  0.040 (0.025)  0.039 (0.012)  \n",
+      "9960            24  0.003 (0.001)  0.002 (0.001)  0.003 (0.002)  0.002 (0.001)  \n",
+      "9964           256  0.298 (0.010)  0.023 (0.007)  0.094 (0.009)  0.358 (0.024)  \n",
+      "9971            10  0.007 (0.004)  0.004 (0.001)  0.007 (0.005)  0.010 (0.003)  \n",
+      "9976           500  0.136 (0.022)  0.042 (0.019)  0.021 (0.010)  0.056 (0.023)  \n",
+      "9977           118  0.007 (0.001)  0.007 (0.001)  0.025 (0.003)  0.006 (0.001)  \n",
+      "9978            72  0.015 (0.005)  0.012 (0.004)  0.007 (0.003)  0.017 (0.004)  \n",
+      "9981           856  0.056 (0.011)  0.034 (0.014)  0.098 (0.007)  0.237 (0.026)  \n",
+      "9985            51  0.004 (0.001)  0.003 (0.002)  0.004 (0.003)  0.002 (0.001)  \n",
+      "10093            4  0.002 (0.001)  0.001 (0.000)  0.001 (0.000)  0.001 (0.001)  \n",
+      "10101            4  0.035 (0.014)  0.070 (0.025)  0.068 (0.023)  0.032 (0.015)  \n",
+      "14952           30  0.008 (0.002)  0.008 (0.002)  0.011 (0.004)  0.031 (0.006)  \n",
+      "14954           37  0.044 (0.019)  0.026 (0.008)  0.061 (0.034)  0.034 (0.023)  \n",
+      "14965           16  0.003 (0.001)  0.005 (0.001)  0.004 (0.001)  0.003 (0.001)  \n",
+      "14969           32  0.001 (0.000)  0.000 (0.000)  0.000 (0.000)  0.000 (0.000)  \n",
+      "125920          12  0.062 (0.029)  0.068 (0.036)  0.048 (0.020)  0.066 (0.031)  \n",
+      "125922          40  0.005 (0.001)  0.004 (0.001)  0.002 (0.001)  0.001 (0.000)  \n",
+      "146195          42  0.017 (0.001)  0.055 (0.004)  0.087 (0.003)  0.024 (0.001)  \n",
+      "146800          77  0.010 (0.001)  0.000 (0.000)  0.000 (0.000)  0.004 (0.000)  \n",
+      "146817          27  0.022 (0.009)  0.018 (0.005)  0.008 (0.004)  0.019 (0.006)  \n",
+      "146819          18  0.006 (0.001)  0.004 (0.003)  0.005 (0.001)  0.004 (0.002)  \n",
+      "146820           5  0.001 (0.000)  0.000 (0.000)  0.000 (0.000)  0.001 (0.001)  \n",
+      "146821           6  0.040 (0.008)  0.116 (0.022)  0.132 (0.021)  0.040 (0.015)  \n",
+      "146822          16  0.018 (0.007)  0.016 (0.004)  0.022 (0.004)  0.019 (0.007)  \n",
+      "146824         240  0.066 (0.018)  0.051 (0.009)  0.062 (0.015)  0.226 (0.026)  \n",
+      "167119           6  0.008 (0.003)  0.015 (0.004)  0.038 (0.005)  0.008 (0.002)  \n",
+      "167120          21  0.001 (0.001)  0.001 (0.001)  0.001 (0.000)  0.001 (0.001)  \n",
+      "167125        1558  0.011 (0.003)  0.015 (0.006)  0.023 (0.007)  0.016 (0.001)  \n",
+      "167140         180  0.174 (0.009)  0.015 (0.005)  0.022 (0.006)  0.065 (0.013)  \n",
+      "167141          20  0.010 (0.003)  0.007 (0.003)  0.002 (0.002)  0.010 (0.003)  \n"
+     ]
+    }
+   ],
+   "source": [
+    "with pd.option_context('display.max_rows', None, 'display.max_columns', None):  # more options can be specified also\n",
+    "    print(score_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "score_df.to_csv('./figures/ece_scores.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### MCE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tasks, task_score_means, task_score_stds = get_task_scores(mce)\n",
+    "\n",
+    "df_rows = []\n",
+    "for task, score_means, score_stds in zip(tasks, task_score_means, task_score_stds):\n",
+    "    row = [f'{m:.3f} ({s:.3f})' for m, s in zip(score_means, score_stds)]\n",
+    "    row = [task['task'], task['n_classes'], task['n_samples'], task['n_features']] + row\n",
+    "    df_rows.append(row)\n",
+    "header = ['Dataset', 'n_classes', 'n_samples', 'n_features'] + clfs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "score_df = pd.DataFrame(\n",
+    "    df_rows, columns=header, index=[task['task_id'] for task in tasks]\n",
+    ").sort_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
