updated run code

--- a/benchmarks/uf_experiments/cc18/test_experiment.ipynb
+++ b/benchmarks/uf_experiments/cc18/test_experiment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,8 @@
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
-    "from sklearn.impute import SimpleImputer"
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.metrics import accuracy_score"
    ]
   },
   {
@@ -131,19 +132,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "letter\n"
+      "vowel\n"
      ]
     }
    ],
    "source": [
-    "task_id = 6\n",
+    "task_id = 3022\n",
     "task = openml.tasks.get_task(task_id)  # download the OpenML task\n",
     "X, y = task.get_X_and_y()  # get the data\n",
     "\n",
@@ -157,38 +158,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "n_estimators = 100\n",
     "n_jobs = 5\n",
+    "cv = 5\n",
     "\n",
     "clfs = [\n",
-    "    ('IRF', CalibratedClassifierCV(\n",
-    "            base_estimator=RandomForestClassifier(n_estimators=n_estimators, n_jobs=n_jobs),\n",
-    "            method=\"isotonic\",\n",
-    "            cv=5,\n",
-    "        )),\n",
-    "    ('SigRF', CalibratedClassifierCV(\n",
-    "            base_estimator=RandomForestClassifier(n_estimators=n_estimators, n_jobs=n_jobs),\n",
-    "            method=\"sigmoid\",\n",
-    "            cv=5,\n",
-    "        )),\n",
-    "    ('UF', UncertaintyForest(\n",
-    "            n_estimators=n_estimators, tree_construction_proportion=0.5, kappa=1\n",
-    "        )),\n",
+    "#     ('IRF', CalibratedClassifierCV(\n",
+    "#             base_estimator=RandomForestClassifier(n_estimators=n_estimators // cv, n_jobs=n_jobs),\n",
+    "#             method=\"isotonic\",\n",
+    "#             cv=cv,\n",
+    "#         )),\n",
+    "#     ('SigRF', CalibratedClassifierCV(\n",
+    "#             base_estimator=RandomForestClassifier(n_estimators=n_estimators // cv, n_jobs=n_jobs),\n",
+    "#             method=\"sigmoid\",\n",
+    "#             cv=cv,\n",
+    "#         )),\n",
+    "#     ('UF', UncertaintyForest(\n",
+    "#             n_estimators=n_estimators, tree_construction_proportion=0.5, kappa=1\n",
+    "#         )),\n",
     "    ('RF', RandomForestClassifier(n_estimators=n_estimators, n_jobs=n_jobs))\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RF\n",
+      "Done\n"
+     ]
+    }
+   ],
    "source": [
-    "cv = 5\n",
+    "cv = 2\n",
     "skf = StratifiedKFold(n_splits=cv, shuffle=True, random_state=0)\n",
     "\n",
     "results_dict = {\n",
@@ -203,11 +214,11 @@
     "    'cv': cv,\n",
     "}\n",
     "\n",
-    "numeric_indices = np.asarray(list(set(range(X.shape[1])) - set(nominal_indices)))\n",
+    "numeric_indices = np.delete(np.arange(X.shape[1]), nominal_indices)\n",
     "numeric_transformer = SimpleImputer(strategy='median')\n",
     "\n",
     "nominal_transformer = Pipeline(steps=[\n",
-    "    # ('onehot', OneHotEncoder(drop='if_binary')),\n",
+    "    ('onehot', OneHotEncoder(handle_unknown = 'ignore')),\n",
     "    ('imputer', SimpleImputer(strategy='most_frequent')),\n",
     "    ])\n",
     "\n",
@@ -223,9 +234,10 @@
     "    results_dict['test_indices'].append(test_index)\n",
     "\n",
     "\n",
-    "X = OneHotEncoder(drop='if_binary', sparse=False).fit_transform(X)\n",
+    "# X = OneHotEncoder(drop='if_binary', sparse=False).fit_transform(X)\n",
     "\n",
     "for clf_name, clf in clfs:\n",
+    "    print(clf_name)\n",
     "    pipeline = Pipeline(steps=[\n",
     "        ('Preprocessor', preprocessor),\n",
     "        ('Estimator', clf)])\n",
@@ -239,12 +251,13 @@
     "        y_proba = pipeline.predict_proba(X_test)\n",
     "        fold_probas.append(y_proba)\n",
     "    \n",
-    "    results_dict[clf_name] = fold_probas"
+    "    results_dict[clf_name] = fold_probas\n",
+    "print('Done')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,17 +271,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "IRF: 0.037 (0.0000)\n",
-      "SigRF: 0.037 (0.0000)\n",
-      "UF: 0.037 (0.0000)\n",
-      "RF: 0.037 (0.0000)\n"
+      "RF: 0.023 (0.0001)\n"
      ]
     }
    ],
@@ -285,6 +295,40 @@
     "    np.std([\n",
     "        brier_score_mvloss(\n",
     "            results_dict['y'][idx], y_proba\n",
+    "        ) for y_proba, idx in zip(results_dict[name], results_dict['test_indices'])\n",
+    "    ]) for name, _ in clfs\n",
+    "]\n",
+    "\n",
+    "for (name, _), m, s in zip(clfs, score_means, score_stds):\n",
+    "    print(f'{name}: {m:.3f} ({s:.4f})')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RF: 0.067 (0.0061)\n"
+     ]
+    }
+   ],
+   "source": [
+    "score_means = [\n",
+    "    np.mean([\n",
+    "        1 - accuracy_score(\n",
+    "            results_dict['y'][idx], y_proba.argmax(1)\n",
+    "        ) for y_proba, idx in zip(results_dict[name], results_dict['test_indices'])\n",
+    "    ]) for name, _ in clfs\n",
+    "]\n",
+    "\n",
+    "score_stds = [\n",
+    "    np.std([\n",
+    "        1 - accuracy_score(\n",
+    "            results_dict['y'][idx], y_proba.argmax(1)\n",
     "        ) for y_proba, idx in zip(results_dict[name], results_dict['test_indices'])\n",
     "    ]) for name, _ in clfs\n",
     "]\n",
