--- a/benchmarks/uf_experiments/cc18/test_experiment.ipynb
+++ b/benchmarks/uf_experiments/cc18/test_experiment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,19 +132,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vowel\n"
+      "credit-approval\n"
      ]
     }
    ],
    "source": [
-    "task_id = 3022\n",
+    "task_id = 29\n",
     "task = openml.tasks.get_task(task_id)  # download the OpenML task\n",
     "X, y = task.get_X_and_y()  # get the data\n",
     "\n",
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
     "numeric_transformer = SimpleImputer(strategy='median')\n",
     "\n",
     "nominal_transformer = Pipeline(steps=[\n",
-    "    ('onehot', OneHotEncoder(handle_unknown = 'ignore')),\n",
+    "    ('onehot', OneHotEncoder(handle_unknown = 'ignore', sparse=False)),\n",
     "    ('imputer', SimpleImputer(strategy='most_frequent')),\n",
     "    ])\n",
     "\n",
