--- a/benchmarks/uf_experiments/cc18/test_experiment.ipynb
+++ b/benchmarks/uf_experiments/cc18/test_experiment.ipynb
@@ -19,7 +19,10 @@
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
     "from sklearn.impute import SimpleImputer\n",
-    "from sklearn.metrics import accuracy_score"
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
@@ -139,12 +142,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "credit-approval\n"
+      "kr-vs-kp\n"
      ]
     }
    ],
    "source": [
-    "task_id = 29\n",
+    "task_id = 3\n",
     "task = openml.tasks.get_task(task_id)  # download the OpenML task\n",
     "X, y = task.get_X_and_y()  # get the data\n",
     "\n",
@@ -158,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,22 +180,24 @@
     "#             method=\"sigmoid\",\n",
     "#             cv=cv,\n",
     "#         )),\n",
-    "#     ('UF', UncertaintyForest(\n",
-    "#             n_estimators=n_estimators, tree_construction_proportion=0.5, kappa=1\n",
-    "#         )),\n",
+    "    ('UF', UncertaintyForest(\n",
+    "            n_estimators=n_estimators, tree_construction_proportion=0.5, kappa=1,\n",
+    "            max_samples=0.5, max_features=\"sqrt\", n_jobs=n_jobs\n",
+    "        )),\n",
     "    ('RF', RandomForestClassifier(n_estimators=n_estimators, n_jobs=n_jobs))\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "UF\n",
       "RF\n",
       "Done\n"
      ]
@@ -257,32 +262,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def brier_score_mvloss(y_true, y_proba):\n",
-    "    if y_true.ndim == 1:\n",
-    "        y_true = np.squeeze(np.eye(len(np.unique(y_true)))[y_true.reshape(-1)])\n",
-    "    return np.mean(\n",
-    "        np.mean((y_proba - y_true)**2, axis=1)\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RF: 0.023 (0.0001)\n"
+      "UF: 0.033 (0.0018)\n",
+      "RF: 0.017 (0.0027)\n"
      ]
     }
    ],
    "source": [
+    "def brier_score_mvloss(y_true, y_proba):\n",
+    "    if y_true.ndim == 1:\n",
+    "        y_true = np.squeeze(np.eye(len(np.unique(y_true)))[y_true.reshape(-1)])\n",
+    "    return np.mean(\n",
+    "        np.mean((y_proba - y_true)**2, axis=1)\n",
+    "    )\n",
+    "\n",
     "score_means = [\n",
     "    np.mean([\n",
     "        brier_score_mvloss(\n",
@@ -305,14 +304,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RF: 0.067 (0.0061)\n"
+      "UF: 0.023 (0.0091)\n",
+      "RF: 0.014 (0.0034)\n"
      ]
     }
    ],
