--- a/benchmarks/uf_experiments/cc18/test_experiment.ipynb
+++ b/benchmarks/uf_experiments/cc18/test_experiment.ipynb
@@ -161,36 +161,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "n_estimators = 100\n",
     "n_jobs = 5\n",
-    "cv = 5\n",
+    "clf_cv = 5\n",
+    "max_features = 'sqrt'\n",
     "\n",
     "clfs = [\n",
     "#     ('IRF', CalibratedClassifierCV(\n",
-    "#             base_estimator=RandomForestClassifier(n_estimators=n_estimators // cv, n_jobs=n_jobs),\n",
+    "#             base_estimator=RandomForestClassifier(\n",
+    "#                 n_estimators=n_estimators // clf_cv,\n",
+    "#                 max_features=max_features,\n",
+    "#                 n_jobs=n_jobs),\n",
     "#             method=\"isotonic\",\n",
-    "#             cv=cv,\n",
+    "#             cv=clf_cv,\n",
     "#         )),\n",
     "#     ('SigRF', CalibratedClassifierCV(\n",
-    "#             base_estimator=RandomForestClassifier(n_estimators=n_estimators // cv, n_jobs=n_jobs),\n",
+    "#             base_estimator=RandomForestClassifier(\n",
+    "#                 n_estimators=n_estimators // clf_cv,\n",
+    "#                 max_features=max_features,\n",
+    "#                 n_jobs=n_jobs),\n",
     "#             method=\"sigmoid\",\n",
-    "#             cv=cv,\n",
+    "#             cv=clf_cv,\n",
     "#         )),\n",
     "    ('UF', UncertaintyForest(\n",
-    "            n_estimators=n_estimators, tree_construction_proportion=0.5, kappa=1,\n",
-    "            max_samples=0.5, max_features=\"sqrt\", n_jobs=n_jobs\n",
+    "            n_estimators=n_estimators,\n",
+    "            tree_construction_proportion=0.5,\n",
+    "            kappa=1,\n",
+    "            max_samples=1.0,\n",
+    "            max_features=max_features,\n",
+    "            n_jobs=n_jobs\n",
     "        )),\n",
-    "    ('RF', RandomForestClassifier(n_estimators=n_estimators, n_jobs=n_jobs))\n",
+    "    ('RF', RandomForestClassifier(\n",
+    "            n_estimators=n_estimators,\n",
+    "            n_jobs=n_jobs,\n",
+    "            max_features=max_features\n",
+    "        ))\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -262,15 +277,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "UF: 0.033 (0.0018)\n",
-      "RF: 0.017 (0.0027)\n"
+      "UF: 0.033 (0.0022)\n",
+      "RF: 0.016 (0.0030)\n"
      ]
     }
    ],
@@ -548,7 +563,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
